# emojifyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/emoji-tools/: SKILL.md
src/emojifyi/: __init__.py  api.py  cli.py  data.py  encoding.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_emojifyi.py  test_mcp.py
